Fixes elements overflowing and backgrounds not covering content.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,12 +5,23 @@
 	padding: 0px;
 }
 
+header {
+	background: #99bbdd;
+	color: white;
+	padding: 1em 10%;
+	min-height: 15vh;
+	align-items: center;
+	border-color: white;
+	width: 100%;
+	display: flex;
+}
+
 main {
 	background: #eeeee6;
 	color: #303030;
 	padding-left: 10%;
 	border-color: black;
-	max-height: 85vh;
+	min-height: 85vh;
 	max-width: 100vw;
 	display: grid;
 	grid-template-areas:
@@ -25,11 +36,10 @@ section {
 section:nth-child(2) {
 	order: 2;
 	grid-area: section2;
-	align-self: start;
+
 }
 figure {
 	grid-area: figure;
-	max-height: 20%;
 	filter: drop-shadow(10px 20px 10px grey);
 	margin: 20%;
 }
@@ -37,16 +47,6 @@ img {
 	max-width: 100%;
 	height: auto;
 	max-height: 60vh;
-}
-
-header {
-	background: #99bbdd;
-	padding: 1em 10%;
-	min-height: 15vh;
-	display: flex;
-	align-items: center;
-	border-color: white;
-	width: 100%;
 }
 
 .italic {
@@ -61,16 +61,13 @@ header {
 h1, h2 {
 	border-bottom: 1px solid;
 	font-family: serif;
-	padding: 1em 0 0.3em 3vw;
+	padding: 0.5em 3vw;
 }
 h1 {
-	border-color: white;
-	color: white;
 	letter-spacing: 0.5em;
 }
 h2 {
 	letter-spacing: 0.1em;
-	margin-right: 5%;
 	margin-bottom: 0.7em;
 }
 
@@ -92,17 +89,28 @@ p {
 
 @media screen and (max-width: 1200px) {
 	main {
+		max-height: none;
 		padding-left: 0;
 		grid-template-areas:
 			"figure"
 			"section"
 			"section2";
+		grid-template-rows: auto auto;
 	}
 	figure {
 		margin: 10%;
 	}
+	header {
+		text-align: center;
+		padding: 0;
+		justify-content: center;
+	}
 	h1, h2 {
 		text-align: center;
+	}
+	h1 {
+		padding: 0%;
+		border: none;
 	}
 	h2 {
 		margin: 5%;
